--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,8 @@
 
+
+
+
+
 /* Background and layout */
 .bg-dark {
   background-color: #1a1a1a;
@@ -13,6 +17,7 @@
 .layout-container {
   display: flex;
   width: 100%;
+  flex-wrap: wrap;
 }
 
 /* Grid and chart container */
@@ -27,14 +32,6 @@
   background-color: #1a1a1a;
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-  position: relative;
-}
-
-.chart-container {
-  padding: 16px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
   position: relative;
 }
 
@@ -98,6 +95,7 @@
   background-color: #2a2a2a;
   border-radius: 12px;
   margin-left: 16px;
+  flex-shrink: 0;
 }
 
 .sidebar-content {
@@ -106,10 +104,21 @@
   gap: 16px;
 }
 
+.date-metric-section {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  background-color: #242424;
+  border-radius: 12px;
+  padding: 16px;
+}
+
 .sidebar-date-picker {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 8px;
+  width: 100%;
 }
 
 .date-picker-single {
@@ -119,31 +128,84 @@
   border-radius: 8px;
   padding: 4px 8px;
   text-align: center;
+  width: 90%;
+  max-width: 100px;
+}
+
+.date-range-separator {
+  color: #e5e5e5;
+  margin: 8px 0;
+}
+
+.date-buttons-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 8px;
+  width: 100%;
+}
+
+.date-buttons {
+  display: flex;
+  justify-content: space-between;
+  gap: 4px;
+}
+
+.date-buttons button {
+  background-color: #2d2d2d;
+  color: #ffffff;
+  border: 1px solid #444444;
+  border-radius: 8px;
+  padding: 6px 12px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  width: 30%;
+}
+
+.date-buttons button:hover {
+  background-color: #444444;
 }
 
 /* Metrics section styling */
 .metrics-section {
-  padding: 8px;
-  background-color: #2a2a2a;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  background-color: #242424;
   border-radius: 12px;
+  padding: 16px;
 }
 
-.metrics-title {
+.metrics-group {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.group-header {
   color: #e5e5e5;
-  margin-bottom: 8px;
-  text-align: center;
   font-size: 1rem;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.metrics-selector {
+.collapse-icon {
+  transition: transform 0.3s ease;
+}
+
+.collapse-icon.collapsed {
+  transform: rotate(180deg);
+}
+
+.group-metrics {
   display: flex;
   flex-wrap: wrap;
-  gap: 8px;
+  gap: 4px;
 }
 
 .metric-button {
   color: #ffffff;
-  border: 1px solid #444444;
   border-radius: 8px;
   padding: 4px 8px;
   cursor: pointer;
@@ -153,7 +215,7 @@
 }
 
 .metric-button.active {
-  border-color: inherit;
+  background-color: inherit;
 }
 
 .metric-button:hover {
