--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,8 +1,4 @@
 
-
-
-
-
 /* Background and layout */
 .bg-dark {
   background-color: #1a1a1a;
@@ -18,6 +14,16 @@
   display: flex;
   width: 100%;
   flex-wrap: wrap;
+}
+
+/* Horizontal Bar */
+.horizontal-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 /* Grid and chart container */
@@ -104,18 +110,9 @@
   gap: 16px;
 }
 
-.date-metric-section {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  background-color: #242424;
-  border-radius: 12px;
-  padding: 16px;
-}
-
+/* Date picker and buttons */
 .sidebar-date-picker {
   display: flex;
-  flex-direction: column;
   align-items: center;
   gap: 8px;
   width: 100%;
@@ -128,13 +125,12 @@
   border-radius: 8px;
   padding: 4px 8px;
   text-align: center;
-  width: 90%;
-  max-width: 100px;
+  width: 120px;
 }
 
 .date-range-separator {
   color: #e5e5e5;
-  margin: 8px 0;
+  margin: 0 8px;
 }
 
 .date-buttons-wrapper {
@@ -146,8 +142,7 @@
 
 .date-buttons {
   display: flex;
-  justify-content: space-between;
-  gap: 4px;
+  gap: 8px;
 }
 
 .date-buttons button {
@@ -158,7 +153,6 @@
   padding: 6px 12px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  width: 30%;
 }
 
 .date-buttons button:hover {
@@ -168,7 +162,7 @@
 /* Metrics section styling */
 .metrics-section {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   gap: 16px;
   background-color: #242424;
   border-radius: 12px;
