--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,25 @@
+html, body {
+  min-height: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+body::before {
+  content: "";
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+html, body, #root {
+  overflow: auto !important;
+}
 /* Import fonts from Google Fonts */
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Source+Sans+Pro:wght@400;600&display=swap');
 
 /* General Styles */
