--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,13 +1,13 @@
-
 /* General Styles */
-html, body {
+html,
+body {
   min-height: 100%;
   height: 100%;
   overflow: hidden;
 }
 
 body::before {
-  content: "";
+  content: '';
   display: block;
   position: fixed;
   top: 0;
@@ -17,11 +17,15 @@ body::before {
   z-index: -1;
 }
 
-html, body, #root {
+html,
+body,
+#root {
   overflow: auto !important;
 }
 
-body, input, button {
+body,
+input,
+button {
   font-family: 'Poppins', sans-serif;
   color: #e5e5e5;
   margin: 0;
@@ -32,9 +36,15 @@ body, input, button {
   overflow-x: hidden;
 }
 
-h1, h2, h3, h4, h5, h6, label {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+label {
   font-family: 'Poppins', sans-serif;
-  font-weight: 100600;
+  font-weight: 600;
 }
 
 .bg-dark {
@@ -54,7 +64,6 @@ h1, h2, h3, h4, h5, h6, label {
   border-bottom: 2px solid #444444;
   background-color: #1a1a1a;
   z-index: 100;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
 .header h1 {
@@ -94,8 +103,8 @@ h1, h2, h3, h4, h5, h6, label {
   width: 250px;
   z-index: 2;
   background: linear-gradient(145deg, #2a2a2a, #1f1f1f);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
-  border-radius: 12px;
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
   height: calc(100vh - 100px);
   overflow-y: auto;
   padding: 10px;
@@ -124,11 +133,10 @@ h1, h2, h3, h4, h5, h6, label {
 }
 
 .metrics-group {
-  background-color: #1f1f1f; /* Stock background for the group */
+  background-color: #1f1f1f;
   border-radius: 8px;
   padding: 8px;
   margin-bottom: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   border: 1px solid #444444;
 }
 
@@ -153,7 +161,7 @@ h1, h2, h3, h4, h5, h6, label {
 
 .group-metrics {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); /* 2xN grid layout */
+  grid-template-columns: repeat(2, 1fr);
   gap: 8px;
   margin-top: 8px;
 }
@@ -171,16 +179,6 @@ h1, h2, h3, h4, h5, h6, label {
   transform: scale(1.03);
 }
 
-.metric-label-text {
-  font-size: 0.9rem;
-}
-
-
-.metric-item.selected .metric-label-text {
-  color: #ffffff;
-  text-shadow: 1px 1px 2px #000000; /* White text with black border for contrast */
-}
-
 .metric-item:hover {
   transform: scale(1.03);
 }
@@ -188,6 +186,11 @@ h1, h2, h3, h4, h5, h6, label {
 .metric-label-text {
   color: #e5e5e5;
   font-size: 0.9rem;
+}
+
+.metric-item.selected .metric-label-text {
+  color: #ffffff;
+  text-shadow: 1px 1px 2px #000000;
 }
 
 /* Grid Layout for Date Buttons */
@@ -238,8 +241,8 @@ h1, h2, h3, h4, h5, h6, label {
 
 .chart-wrapper {
   background-color: #1a1a1a;
-  border-radius: 12px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   padding: 16px;
   z-index: 2;
   border: 1px solid #444444;
@@ -259,7 +262,7 @@ h1, h2, h3, h4, h5, h6, label {
   border: 1px solid #444444;
   border-radius: 8px;
   padding: 8px 12px;
-  width: 100%;
+  width: 70%;
   text-align: center;
   font-size: 1rem;
 }
@@ -289,21 +292,6 @@ h1, h2, h3, h4, h5, h6, label {
   }
 }
 
-/* Spotlight Effect */
-.spotlight {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 150px;
-  height: 150px;
-  background: radial-gradient(circle, rgba(255,255,255,0.1), transparent);
-  border-radius: 50%;
-  pointer-events: none;
-  z-index: 0;
-  transition: transform 0.1s ease-out;
-}
-
-
 /* Ticker Field and Toggle Button Styling */
 .ticker-field {
   display: flex;
@@ -318,7 +306,7 @@ h1, h2, h3, h4, h5, h6, label {
   border: 1px solid #444444;
   border-radius: 8px;
   padding: 8px 12px;
-  width: 70%; /* Adjusted to make room for the button */
+  width: 70%;
   text-align: center;
   font-size: 1rem;
 }
@@ -327,9 +315,9 @@ h1, h2, h3, h4, h5, h6, label {
   background-color: #1a1a1a;
   color: #e5e5e5;
   border: 1px solid #444444;
-  border-radius: 8px; /* Matching the radius of the ticker input */
-  padding: 8px 12px; /* Same padding as the ticker input */
-  width: 28%; /* Adjusted to match the width proportionally with the ticker input */
+  border-radius: 8px;
+  padding: 8px 12px;
+  width: 28%;
   text-align: center;
   cursor: pointer;
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
@@ -341,18 +329,18 @@ h1, h2, h3, h4, h5, h6, label {
 }
 
 .custom-tooltip {
-  background-color: rgba(50, 50, 50, 0.8); /* Opaque dark grey background */
+  background-color: rgba(50, 50, 50, 0.8);
   border-radius: 8px;
   padding: 10px;
-  color: #ffffff; /* Default text color */
+  color: #ffffff;
   font-family: 'Poppins', sans-serif;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Slight shadow for depth */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .tooltip-label {
   margin-bottom: 5px;
   font-weight: bold;
-  color: #ffffff; /* White color for the date */
+  color: #ffffff;
 }
 
 .metric-name {
@@ -360,5 +348,5 @@ h1, h2, h3, h4, h5, h6, label {
 }
 
 .metric-value {
-  color: #ffffff; /* White color for the values */
+  color: #ffffff;
 }
